--- a/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
@@ -25,8 +25,8 @@ spec:
       TZ: "Europe/Amsterdam"
       ESPHOME_DASHBOARD_USE_PING: "true"
       ESPHOME_DASHBOARD_RELATIVE_URL: "/"
-      # ESPHOME_QUICKWIZARD:
-      ESPHOME_IS_HA_ADDON: false
+      ESPHOME_QUICKWIZARD: true
+      ESPHOME_IS_HA_ADDON: 1
       DISABLE_HA_AUTHENTICATION: true
       # USERNAME:
       # PASSWORD:
